Fixed no rounded corner on mini ToiletCard on iOS

--- a/frontend/src/components/ToiletCard/styles.css
+++ b/frontend/src/components/ToiletCard/styles.css
@@ -70,6 +70,8 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
+    border-top-left-radius: 1.2rem;
+    border-top-right-radius: 1.2rem;
 }
 
 .gender-icon {
